--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 
 body {
   text-align: center;
-  color: #8d99ae;
+  color: #023e8a;
   font-size: 15px;
   font-weight: 100;
   background-color: #2c7da0;
@@ -10,20 +10,20 @@ body {
 }
 
 h1 {
-  color: #013a63;
+  color: #89c2d9;
   font-size: 50px;
   font-weight: 900;
 }
 
 h2 {
   color: #023e8a;
-  font-size: 30px;
+  font-size: 40px;
   font-weight: 20;
 }
 
 h3 {
   color: #48cae4;
-  font-size: 15px;
+  font-size: 20px;
   font-weight: 50;
 }
 
@@ -38,35 +38,18 @@ h3 {
 }
 
 .card-white {
-  background-color: #e2eafc;
-  padding: 30px;
+  background-color: white;
+  padding: 40px;
   box-shadow: 0px 10px 30px rgb(0 0 0 / 10%);
   border-radius: 4px;
-  margin: 40px 0px;
+  margin: 20px 0px;
   text-align: center;
-  width: 600px;
 }
 
 .btn-blue {
-  background-color: #2c7da0;
+  background-color: #6B72E1;
   color: white;
-  padding: 30px 40px;
-  border-radius: 10px;
-  display: inline-block;
-  transition: background-color  1s;
-}
-
-.btn-blue:hover {
-  background-color: #a9d6e5
-}
-
-ul {
-  margin: 0;
-}
-
-.list-inline > li {
-  display: inline-block;
-/*  padding: 0px 20px;*/
-  margin: 0;
-  padding-inline-start: 0px;
+  padding: 15px 20px;
+  border-radius: 4px;
+  margin-top: 300px
 }
